Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,24 @@
         </div>
     </section>
     <footre>
-        social links here
+       <ul>
+        <li>
+            <a href="http://facebook.com" target="_blank" rel="noopner" 
+            airial-label="Visit our Facebook page (open in a new tab)"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="http://twitter.com" target="_blank" rel="noopner" 
+            airial-label="Visit our Twitter page (open in a new tab)"><i class="fab fa-twitter-square"></i></a>
+        </li>
+        <li>
+            <a href="http://youtube.com" target="_blank" rel="noopner" 
+            airial-label="Visit our Youtube page (open in a new tab)"><i class="fab fa-youtube-square"></i></a>
+        </li>
+        <li>
+            <a href="http://instagram.com" target="_blank" rel="noopner" 
+            airial-label="Visit our Instagram page (open in a new tab)"><i class="fab fa-instagram"></i></a>
+        </li>
+       </ul>
     </footre>
 
     <!--font awsome script-->
