add sylte to footer social media icons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </section>
     <footre>
-       <ul>
+       <ul class="social-networks">
         <li>
             <a href="http://facebook.com" target="_blank" rel="noopner" 
             airial-label="Visit our Facebook page (open in a new tab)"><i class="fab fa-facebook"></i></a>
